--- a/index.html
+++ b/index.html
@@ -40,211 +40,115 @@
         </script><!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stephen Muhammed | Author & Game Creator</title>
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #1a1a1a;
-      color: #fff;
-      margin: 0;
-      overflow-x: hidden;
-    }
-    /* Header Slideshow */
-    #header {
-      position: relative;
-      height: 500px;
-      background-size: cover;
-      background-position: center;
-      animation: slideshow 15s infinite;
-    }
-    @keyframes slideshow {
-      0%, 25% { background-image: url('https://images.unsplash.com/photo-1620121478247-ec786bd85e1c?auto=format&fit=crop&w=1920'); }
-      33%, 58% { background-image: url('https://images.unsplash.com/photo-1518531933037-91b2f5f229cc?auto=format&fit=crop&w=1920'); }
-      66%, 91% { background-image: url('https://images.unsplash.com/photo-1541888946425-d81cb6a82527?auto=format&fit=crop&w=1920'); }
-    }
-    #header-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-    /* Navigation */
-    nav {
-      background: #1f2a44;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    .dropdown:hover .dropdown-menu {
-      display: block;
-    }
-    .dropdown-menu {
-      display: none;
-      position: absolute;
-      background: #1f2a44;
-      min-width: 160px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    }
-    .dropdown-menu a {
-      color: #fff;
-      padding: 12px 16px;
-      display: block;
-      text-align: left;
-    }
-    .dropdown-menu a:hover {
-      background: #28a745;
-    }
-    /* Sections */
-    section {
-      padding: 4rem 2rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .section-title {
-      font-family: 'Ubuntu', sans-serif;
-      color: #28a745;
-      text-align: center;
-      margin-bottom: 2rem;
-      font-size: 2.5rem;
-    }
-    /* Form */
-    form {
-      max-width: 600px;
-      margin: 0 auto;
-      background: #2d3748;
-      padding: 2rem;
-      border-radius: 8px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 1px solid #4a5568;
-      border-radius: 4px;
-      background: #1a202c;
-      color: #fff;
-    }
-    button {
-      background: #28a745;
-      color: #fff;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #38c172;
-    }
-    /* Footer */
-    footer {
-      background: #1f2a44;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    /* Animations */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(20px);
-      animation: fadeIn 1s forwards;
-    }
-    @keyframes fadeIn {
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stephen Muhammed - Afrofuturistic Writer</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* Custom Styles */
+        body {
+            font-family: 'Georgia', serif;
+            background-color: #f8f9fa;
+        }
+        .hero-bg {
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/random/1920x1080/?afrofuturism');
+            background-size: cover;
+            background-position: center;
+        }
+        .typing-effect {
+            border-right: 2px solid #fff;
+            white-space: nowrap;
+            overflow: hidden;
+            animation: blinkCursor 0.7s infinite;
+        }
+        @keyframes blinkCursor {
+            50% { border-color: transparent; }
+        }
+        .portfolio-item, .book-item {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .portfolio-item:hover, .book-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        .filter-btn.active {
+            background-color: #1a202c;
+            color: #fff;
+        }
+        .download-btn {
+            background-color: #4a5568;
+            color: #fff;
+            padding: 0.5rem 1rem;
+            border-radius: 0.25rem;
+            transition: background-color 0.3s ease;
+        }
+        .download-btn:hover {
+            background-color: #2d3748;
+        }
+    </style>
 </head>
 <body>
-  <!-- Header -->
-  <header id="header">
-    <div id="header-overlay">
-      <div class="text-center fade-in">
-        <h1 class="text-4xl md:text-6xl font-bold font-ubuntu text-green-500">Stephen Muhammed</h1>
-        <p class="text-xl md:text-2xl mt-4 text-gold-400">Author of Afrofuturistic Adventures & Creator of Engaging Trivia Games</p>
-      </div>
-    </div>
-  </header>
-
-  <!-- Navigation -->
-  <nav class="py-4">
-    <div class="max-w-6xl mx-auto flex justify-center items-center">
-      <div class="relative dropdown">
-        <button class="text-white px-4 py-2 text-lg font-semibold hover:text-green-500">Menu</button>
-        <div class="dropdown-menu">
-          <a href="#books">Books</a>
-          <a href="#games">Games</a>
-          <a href="#contact">Contact Us</a>
-          <a href="#socials">Socials</a>
+    <!-- Navigation -->
+    <nav class="bg-gray-900 text-white fixed w-full top-0 z-50 shadow-lg">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold">Stephen Muhammed</a>
+            <ul class="flex space-x-6">
+                <li><a href="#home" class="hover:text-gray-300">Home</a></li>
+                <li><a href="#about" class="hover:text-gray-300">About</a></li>
+                <li><a href="#portfolio" class="hover:text-gray-300">Portfolio</a></li>
+                <li><a href="#books" class="hover:text-gray-300">Books</a></li>
+                <li><a href="#blog" class="hover:text-gray-300">Blog</a></li>
+                <li><a href="#contact" class="hover:text-gray-300">Contact</a></li>
+            </ul>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- Books Section -->
-  <section id="books" class="fade-in">
-    <h2 class="section-title">My Books</h2>
-    <p class="text-center text-lg text-gray-300">Coming Soon! Exciting Afrofuturistic stories, including <em>Pishon: The Uprising</em>, will be showcased here. Stay tuned for epic adventures set in a vibrant African future!</p>
-  </section>
+    <!-- Hero Section -->
+    <section id="home" class="hero-bg h-screen flex items-center justify-center text-white">
+        <div class="text-center">
+            <h1 class="text-5xl font-bold mb-4">Stephen Muhammed</h1>
+            <p class="text-2xl typing-effect" id="typing-text"></p>
+            <a href="#books" class="mt-6 inline-block bg-gray-900 text-white py-2 px-6 rounded hover:bg-gray-700">Discover My Books</a>
+        </div>
+    </section>
 
-  <!-- Games Section -->
-  <section id="games" class="fade-in">
-    <h2 class="section-title">Trivia Game</h2>
-    <p class="text-center text-lg text-gray-300">Test your knowledge with our exciting Trivia Game! Featuring broad questions across history, culture, science, and more, it’s perfect for all ages. Challenge your friends and dive into a world of fun facts inspired by the vibrant spirit of Pishon!</p>
-    <div class="text-center mt-6">
-      <a href="#" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg hover:bg-green-700">Play Now (Coming Soon)</a>
-    </div>
-  </section>
+    <!-- About Section -->
+    <section id="about" class="py-20 bg-white">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold text-center mb-10">About Me</h2>
+            <div class="flex flex-col md:flex-row items-center">
+                <img src="https://source.unsplash.com/random/400x400/?portrait" alt="Stephen Muhammed" class="w-48 h-48 rounded-full mb-6 md:mb-0 md:mr-10">
+                <div>
+                    <p class="text-lg mb-4">I’m Justice Muhammed Okan, writing as Stephen Muhammed, hailing from Auchi, Edo State, Nigeria, where I started scribbling tales at 16, driven by the glaring gap in Afrofuturistic stories on the shelves. With a degree in Educational Administration and Planning from the University of Abuja, I now teach in a secondary school, dreaming up worlds between lesson plans.</p>
+                    <p class="text-lg mb-4">I am fueled by a mission to flood the market with African futures—and it’s just the first spark in a blazing universe of interconnected books.</p>
+                    <a href="#contact" class="inline-block bg-gray-900 text-white py-2 px-6 rounded hover:bg-gray-700">Get in Touch</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="fade-in">
-    <h2 class="section-title">Contact Us</h2>
-    <p class="text-center text-lg text-gray-300 mb-6">Got questions or want to connect? Fill out the form below to reach out!</p>
-    <form action="https://formspree.io/f/styvanus@gmail.com" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="py-20 bg-gray-100">
+        <div class="container mx-auto px-4">
+            <h2 class="text-4xl font-bold text-center mb-10">Portfolio</h2>
+            <div class="flex justify-center mb-8">
+                <button class="filter-btn px-4 py-2 mx-2 rounded bg-gray-200 hover:bg-gray-300 active" data-filter="all">All</button>
+                <button class="filter-btn px-4 py-2 mx-2 rounded bg-gray-200 hover:bg-gray-300" data-filter="fiction">Fiction</button>
+                <button class="filter-btn px-4 py-2 mx-2 rounded bg-gray-200 hover:bg-gray-300" data-filter="short-stories">Short Stories</button>
+                <button class="filter-btn px-4 py-2 mx-2 rounded bg-gray-200 hover:bg-gray-300" data-filter="articles">Articles</button>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="portfolio-item bg-white p-6 rounded shadow-lg" data-category="fiction">
+                    <h3 class="text-xl font-bold mb-2">Children of the Star</h3>
+                    <p class="text-gray-600 mb-4">A short story exploring a futuristic Nigeria where ancient myths power advanced technology.</p>
+                    <a href="#" class="text-gray-900 hover:underline">Read More</a>
+                </div>
+                <div class="portfolio-item bg-white p-6 rounded shadow-lg" data-category="short-stories">
+                    <h3 class="text-xl font-bold mb-2">The Orisha Circuit</h3>
+                    <p class="text-gray-600 mb-4">A tale of a young coder harnessing ancestral spirits to reshape Africa’s digital future.</p>
+                    <a href="#" class="text-gray-900 hover:underline">Read More</a>
+                </div>
+               क्त
 
-  <!-- Socials Section -->
-  <section id="socials" class="fade-in">
-    <h2 class="section-title">Follow Me</h2>
-    <p class="text-center text-lg text-gray-300 mb-6">Stay updated on my books and games!</p>
-    <div class="flex justify-center space-x-6">
-      <a href="https://twitter.com" target="_blank" class="text-green-500 hover:text-green-400">Twitter/X</a>
-      <a href="https://instagram.com" target="_blank" class="text-green-500 hover:text-green-400">Instagram</a>
-      <a href="https://facebook.com" target="_blank" class="text-green-500 hover:text-green-400">Facebook</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p class="text-gray-400">&copy; 2025 Stephen Muhammed. All rights reserved.</p>
-  </footer>
-
-  <script>
-    // Simple JavaScript for smooth scrolling
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
-      });
-    });
-  </script>
-</body>
-</html>
+System: * Today's date and time is 04:36 PM WAT on Wednesday, June 11, 2025.
